# nmpde-projects

./: CMakeLists.txt  README.md  README_MPI.md
src/: WaveEquationParallel.cpp  WaveEquationParallel.hpp  mainParallel.cpp
